# OTUS

./: .gitignore  conftest.py  pyproject.toml
1_OOP/src/: rectangle.py
1_OOP/tests/: test_circle.py  test_figure.py  test_rectangle.py
OOP/src/: circle.py  figure.py  square.py  triangle.py
OOP/tests/: test_circle.py  test_figure.py  test_rectangle.py
OOP_lesson3/src/: Circle.py  Rectangle.py  Square.py  Triangle.py
OOP_lesson3/tests/: test_circle.py  test_rectangle.py  test_shape.py  test_square.py  test_triangle.py
allure-results/: 0f4238fc-f483-45f3-9732-1e9a128dba04-attachment.txt  5d20bcbc-4601-4774-8421-9a8a1c11d156-container.json  674f6e3d-6a2b-40c1-8e11-420704c7dfbe-result.json
api_test_dog/tests/: conftest.py  test_dog_api.py
api_test_dog/utils/: __init__.py  api.py  assertions.py  dog_http_methods.py
api_test_openbrewerydb/: conftest.py
api_test_openbrewerydb/tests/: test_brewery_api.py
home_task_page_object/: conftest.py
home_task_web_lesson_9_10_11/: __init__.py  conftest.py
lesson10_element_search/: conftest.py
lesson11_wait_element/: conftest.py
lesson12_WebElement/: config.py  conftest.py
lesson14_page_object/: conftest.py
lesson17_SELENOID/: conftest.py
lesson18_Allure/: conftest.py
lesson21_socket/: config.py
lesson27_jenkins/: Dockerfile
lesson31_scrin/: conftest.py
lesson5_API/: csv.csv  csv_read.py  example.txt  home_task_tead_file.py  read.py
lesson6_API/: conftest.py  test_api_addoptions.py
lesson9_SELENIUM/: conftest.py  web_selenium.py
lesson_7_DDT1/: test_example_mark1.py
src/: Circle.py  Rectangle.py  Shape.py  Square.py  Triangle.py
tests/: test_circle.py  test_rectangle.py  test_shape.py  test_square.py  test_triangle.py
(+82 files in other folders)
