[tool.poetry]
name = "otus"
version = "0.1.0"
description = ""
authors = ["Dmitriy Sorokin <sorokin.da92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
