[tool.poetry]
name = "otus"
version = "0.1.0"
description = ""
authors = ["Dmitriy Sorokin <sorokin.da92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pytest = "^7.1.3"
self = "^2020.12.3"
Cerberus = "^1.3.4"
jsonschema = "^4.16.0"
allure-pytest = "^2.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "regress: marks tests as slow (deselect with '-m \"not slow\"')",
    "sec",
    "auth"
]