[tool.poetry]
name = "otus"
version = "0.1.0"
description = ""
authors = ["Dmitriy Sorokin <sorokin.da92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pytest = "^7.1.3"
self = "^2020.12.3"
Cerberus = "^1.3.4"
jsonschema = "^4.16.0"
allure-pytest = "^2.11.1"
webdriver-manager = "^3.8.5"
selenium = "^4.6.0"
page-objects = "^1.1.0"
config = "^0.5.1"
mysql = "^0.0.3"
mysql-connector-python = "^8.0.31"
Random-Word = "^1.0.11"
pytest-xdist = "^3.1.0"
options = "^1.4.10"
Pillow = "^9.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "regress: marks tests as slow (deselect with '-m \"not slow\"')",
    "sec",
    "auth"
]